--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
     </nav>
   </div>
   <ul id="mobile-nav" class="side-nav">
-      <li>
-        <a href="#home">Principal</a>
-      </li>
-      <li>
-        <a href="#search">Buscar</a>
-      </li>
-      <li>
-        <a href="#popular">Popular</a>
-      </li>
-      <li>
-        <a class="hide-on-small-only" href="#gallery">Galería</a>
-      </li>
-      <li>
-        <a href="#contact">Contacto</a>
-      </li>
+    <li>
+      <a href="#home">Principal</a>
+    </li>
+    <li>
+      <a href="#search">Buscar</a>
+    </li>
+    <li>
+      <a href="#popular">Popular</a>
+    </li>
+    <li>
+      <a class="hide-on-small-only" href="#gallery">Galería</a>
+    </li>
+    <li>
+      <a href="#contact">Contacto</a>
+    </li>
   </ul>
 
   <!-- Section: Slider -->
@@ -182,9 +182,9 @@
             <div class="card-content">
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, nemo.</p>
             </div>
-          </div>          
+          </div>
         </div>
-      </div>       
+      </div>
       <div class="row">
         <div class="col s12 center">
           <a href="#" class="btn btn-large grey darken-3">
@@ -244,19 +244,19 @@
       </div>
 
       <div class="row">
-          <div class="col s12 m3">
-            <img src="https://source.unsplash.com/1600x900/?tree" class="materialboxed responsive-img" alt="">
-          </div>
-          <div class="col s12 m3">
-            <img src="https://source.unsplash.com/1600x900/?car" class="materialboxed responsive-img" alt="">
-          </div>
-          <div class="col s12 m3">
-            <img src="https://source.unsplash.com/1600x900/?plane" class="materialboxed responsive-img" alt="">
-          </div>
-          <div class="col s12 m3">
-            <img src="https://source.unsplash.com/1600x900/?bus" class="materialboxed responsive-img" alt="">
-          </div>
+        <div class="col s12 m3">
+          <img src="https://source.unsplash.com/1600x900/?tree" class="materialboxed responsive-img" alt="">
         </div>
+        <div class="col s12 m3">
+          <img src="https://source.unsplash.com/1600x900/?car" class="materialboxed responsive-img" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img src="https://source.unsplash.com/1600x900/?plane" class="materialboxed responsive-img" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img src="https://source.unsplash.com/1600x900/?bus" class="materialboxed responsive-img" alt="">
+        </div>
+      </div>
     </div>
   </section>
 
@@ -268,8 +268,8 @@
           <div class="card-panel teal white-text center">
             <i class="material-icons medium">email</i>
             <h5>Contact us for booking</h5>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis eum ut adipisci blanditiis veritatis eligendi nisi
-              in distinctio quis. Voluptate!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis eum ut adipisci blanditiis veritatis eligendi
+              nisi in distinctio quis. Voluptate!</p>
           </div>
           <ul class="collection with-header">
             <li class="collection-header">
@@ -277,7 +277,7 @@
             </li>
             <li class="collection-item">Avda San Onofre, xx-9</li>
             <li class="collection-item">Quart de Adaia (45334)</li>
-            <li class="collection-item">Valencia, Spain. Tel: 655454444</li>  
+            <li class="collection-item">Valencia, Spain. Tel: 655454444</li>
           </ul>
         </div>
         <div class="col s12 m6">
@@ -300,7 +300,7 @@
               <label for="message">Message</label>
             </div>
             <input type="submit" value="submit" class="btn">
-          </div>  
+          </div>
         </div>
       </div>
     </div>
